--- a/style.css
+++ b/style.css
@@ -142,7 +142,6 @@ a {
 	text-align: center;
 	width: 25%;
 	min-height: 150px;
-	max-height: 300px;
 	background: #f7f7f7;
 	color: #222;
 	padding: 24px;
@@ -174,6 +173,9 @@ footer {
 }
 
 @media screen and (max-width: 500px) {
+	.card-item:nth-child(4) {
+		width: 100%;
+	}
 	.card {
 		flex-direction: column;
 		gap: 0;
