--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ a {
 }
 
 .parallax {
-	background-image: url('assets/foto/patrick_2.jpg');
+	background-image: url('assets/foto/argaa.png');
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
