--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
 	color: #eaeaea;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 	padding: 10px 20px;
 }
