--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ nav a:hover {
 }
 
 .tentang {
-	background: rgba(255, 22, 177, 0.85);
+	background: #3498DB;
 	color: #eaeaea;
 	padding: 40px;
 	text-align: center;
