--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ nav a:hover {
 footer {
 	padding: 20px;
 	text-align: center;
-	background: #ff16b1;
+	background: #3498DB;
 	color: #eaeaea;
 	margin-top: 60px;
 }
