--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ nav a:hover {
 }
 
 .parallax {
-	background-image: url('assets/foto/benoke.jpeg');
+	background-image: url('assets/foto/benoke.jpg');
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
